Address IntelliJ inspection findings across the codebase
Fixes broken Javadoc references (BlockBaker#bake, FaceDebugTint, SkinState,
FakeBlockFactory) flagged as errors, removes dead code (unused fields,
methods, parameters, imports, redundant @SuppressWarnings), modernizes a
handful of expressions (Math.clamp, !isEmpty, Comparator.comparingDouble,
List.getFirst), and adds @NotNull to toString overrides on BakeKey/BlockKey.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>